# Mallard

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/: Doxyfile
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html
docs/html/search/: pages_0.js
docs/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex
examples/riemann_2d/: input.toml
examples/sod/: input.toml
examples/wedge/: input.toml
sample/: input.toml
src/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
src/boundary/: CMakeLists.txt  boundary.cpp  boundary.h  boundary_extrapolation.cpp  boundary_extrapolation.h  boundary_p_out.cpp  boundary_p_out.h  boundary_symmetry.cpp  boundary_symmetry.h  boundary_upt.cpp  boundary_upt.h  boundary_wall_adiabatic.cpp  boundary_wall_adiabatic.h
src/common/: CMakeLists.txt  common.h  common_debug_helpers.h  common_io.cpp  common_io.h  common_math.cpp  common_math.h  common_typedef.h
src/io/: CMakeLists.txt  data_writer.cpp  data_writer.h
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.h  zone.cpp  zone.h
src/numerics/: CMakeLists.txt  basis.cpp  basis.h  face_reconstruction.cpp  face_reconstruction.h  face_reconstruction_functors.h  flux_functor.cpp  flux_functor.h  flux_reconstruction.cpp  flux_reconstruction.h  quadrature.cpp  quadrature.h  riemann_solver.cpp  riemann_solver.h  time_integrator.cpp  time_integrator.h
src/physics/: CMakeLists.txt  physics.cpp  physics.h
src/solver/: CMakeLists.txt  data.h  flux_functor.h  solver.cpp  solver.h  solver_functors.h  solver_initialize.cpp  solver_rhs.cpp  solver_rhs.h
test/: CMakeLists.txt  add_test.cpp  common_math_test.cpp  physics_test.cpp  riemann_solver_test.cpp  test_main.cpp  test_utils.h  time_integrator_test.cpp
